SERVER-50175 Fix CatalogCache's threadPool shutdown order